Left aligned the links to tidy alignement and fix broken page layout as a result of a long list of translations
https://www.pivotaltracker.com/story/show/47700345

--- a/app/assets/stylesheets/frontend/helpers/_available-languages.scss
+++ b/app/assets/stylesheets/frontend/helpers/_available-languages.scss
@@ -17,10 +17,10 @@
     li {
       float: left;
       display: block;
-      border-left: 1px solid $border-colour;
-      padding: 0 $gutter-one-third;
+      border-right: 1px solid $border-colour;
+      padding: 0 $gutter-one-third 0 0;
       height: 16px;
-      margin: 3px 0 2px;
+      margin: 3px $gutter-one-third 2px 0;
       @include right-to-left {
         float: right;
       }
